[gd_scene format=3 uid="uid://bqkyjxa4kngpv"]

[ext_resource type="Script" uid="uid://capmi3exe716w" path="res://ec_assets/objects/particle_ball.gd" id="1_iuyld"]
[ext_resource type="Texture2D" uid="uid://caauk26spbpi" path="res://ec_assets/textures/particles/fermions.png" id="2_8lbgq"]
[ext_resource type="Texture2D" uid="uid://c6701ajltr22l" path="res://ec_assets/textures/particles/electron.png" id="2_golfs"]
[ext_resource type="Script" uid="uid://b0p6w8lkui4s1" path="res://ec_assets/objects/sound_effect.gd" id="4_golfs"]
[ext_resource type="AudioStream" uid="uid://kkhc7nvm857k" path="res://ec_assets/sounds/punch.wav" id="4_tomyp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4gavj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_golfs"]
radius = 77.00649

[node name="particle_ball" type="CharacterBody2D" unique_id=1288683225]
scale = Vector2(2, 2)
input_pickable = true
script = ExtResource("1_iuyld")

[node name="collision" type="CollisionShape2D" parent="." unique_id=1415996932]
shape = SubResource("CircleShape2D_4gavj")

[node name="range" type="Area2D" parent="." unique_id=2024888040]

[node name="coll" type="CollisionShape2D" parent="range" unique_id=861110397]
shape = SubResource("CircleShape2D_golfs")

[node name="electron" type="Sprite2D" parent="." unique_id=348215413]
texture = ExtResource("2_golfs")

[node name="positron" type="Sprite2D" parent="." unique_id=1166157201]
visible = false
texture = ExtResource("2_8lbgq")
hframes = 3
vframes = 2
frame = 3

[node name="punch" type="AudioStreamPlayer2D" parent="." unique_id=1043158263]
stream = ExtResource("4_tomyp")
attenuation = 3.4822016
script = ExtResource("4_golfs")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
